<resources>
    <string name="app_name">CheckRegister</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="nombre_del_item">Nombre del Item</string>
    <string name="precio">Precio</string>
    <string name="cantidad">Cantidad</string>
    <string name="total">Total</string>
    <string name="guardar">Guardar</string>
    <string name="precio_unitario_es">Precio Unitario es: %1$s</string>
    <string name="la_cantidad_es">La cantidad es: %1$s</string>
</resources>